--- a/9diin/vue3-weather/package.json
+++ b/9diin/vue3-weather/package.json
@@ -42,5 +42,10 @@
   "dependencies": {
     "vue": "^3.2.14",
     "vue-router": "^4.2.5"
+  },
+  "eslintConfig": {
+    "globals": {
+      "kakao": false
+    }
   }
 }
