promise error handling

--- a/MEVN/package.json
+++ b/MEVN/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node test.js",
     "ex_promise_async": "node ex_promise_async_await.js",
-    "ex_promise_then": "node ex_promise_then.js"
+    "ex_promise_then": "node ex_promise_then.js",
+    "ex_promise_error": "node ex_promise_error.js"
   },
   "author": "",
   "license": "ISC",
