used promise all

--- a/MEVN/package.json
+++ b/MEVN/package.json
@@ -7,7 +7,8 @@
     "test": "node test.js",
     "ex_promise_async": "node ex_promise_async_await.js",
     "ex_promise_then": "node ex_promise_then.js",
-    "ex_promise_error": "node ex_promise_error.js"
+    "ex_promise_error": "node ex_promise_error.js",
+    "ex_promise_all": "node ex_promise_all.js"
   },
   "author": "",
   "license": "ISC",
