--- a/MEVN/package.json
+++ b/MEVN/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mevn",
   "version": "1.0.0",
+  "type":"module",
   "description": "this is first project",
   "main": "index.js",
   "scripts": {
@@ -10,8 +11,8 @@
     "ex_promise_error": "node ex_promise_error.js",
     "ex_promise_all": "node ex_promise_all.js",
     "ex_iterable": "node ex_iterable.js",
-    "ex_generator": "node ex_generator.js"
-    ,"ex_map": "node ex_map.js"
+    "ex_generator": "node ex_generator.js",
+    "ex_map": "node ex_map.js"
   },
   "author": "",
   "license": "ISC",
