--- a/MEVN/03_/package.json
+++ b/MEVN/03_/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ramda": "^0.29.1"
   }
 }
